# drakkar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  RFC-0001-architecture.md  RFC-0002-stack-selection.md  RFC-0003-inference-core.md  RFC-0004-feasibility-engine.md  RFC-0005-kv-cache.md  RFC-0006-model-pipeline.md  RFC-0007-api-server.md  RFC-0008-cli-ux.md  RFC-0009-performance.md  SECURITY.md  SPEC.md  deny.toml  rust-toolchain.toml
crates/drakkar-cli/: Cargo.toml  README.md
crates/drakkar-cli/src/: cli.rs  color.rs  config.rs  exit.rs  lib.rs  main.rs  output.rs
crates/drakkar-cli/tests/: cli_reference.rs
crates/drakkar-core/: Cargo.toml
crates/drakkar-core/src/: artifact.rs  capabilities.rs  config.rs  exec.rs  fit.rs  ids.rs  lib.rs  memory.rs  request.rs  schema.rs  secret.rs
crates/drakkar-core/src/config/: tests.rs
crates/drakkar-core/src/error/: mapping.rs  mod.rs  remedy.rs  tests.rs
crates/drakkar-core/tests/: compile_fail.rs  dep_direction.rs  error_reference.rs  error_registry_snapshot.rs  error_roundtrip.proptest-regressions  error_roundtrip.rs  fit_golden.rs  mapping_single_site.rs
crates/drakkar-core/tests/fixtures/: error_registry_snapshot.txt  fit_qwen3_8b.json
crates/drakkar-core/tests/ui/: model_handle_send.rs  model_handle_send.stderr  render_target_hidden.rs  render_target_hidden.stderr
crates/drakkar-engine/: Cargo.toml
crates/drakkar-engine/src/: actor.rs  backend.rs  kv.rs  lib.rs  mock.rs
crates/drakkar-fit/: Cargo.toml
crates/drakkar-fit/schemas/: drakkar.fit.1.schema.json
crates/drakkar-fit/src/: context.rs  json.rs  kv.rs  lib.rs  machine.rs  memory.rs  metadata.rs  model.rs  perf.rs  request.rs  verdict.rs
crates/drakkar-fit/src/metadata/: tests.rs
crates/drakkar-fit/tests/: kv_fixtures.rs  monotonicity.rs
crates/drakkar-gguf/: Cargo.toml
crates/drakkar-gguf/src/: lib.rs
crates/drakkar-grammar/: Cargo.toml
crates/drakkar-grammar/src/: lib.rs
crates/drakkar-mlx/: Cargo.toml
crates/drakkar-mlx-sys/: Cargo.toml
crates/drakkar-mlx-sys/src/: lib.rs
crates/drakkar-mlx/src/: lib.rs
crates/drakkar-models/: Cargo.toml
crates/drakkar-models/src/: lib.rs
crates/drakkar-sched/: Cargo.toml
crates/drakkar-sched/src/: lib.rs
crates/drakkar-server/: Cargo.toml
crates/drakkar-server/src/: lib.rs
docs/reference/: cli.md  configuration.md  error-codes.md  machine-json.md  support-matrix.md  troubleshooting.md
docs/rfcs/: RFC-0001-architecture.md  RFC-0002-stack-selection.md  RFC-0003-inference-core.md  RFC-0004-feasibility-engine.md  RFC-0005-kv-cache.md  RFC-0006-model-pipeline.md  RFC-0007-api-server.md  RFC-0008-cli-ux.md  RFC-0009-performance.md  RFC-0010-backend-abi.md  RFC-0011-error-taxonomy.md  RFC-0012-release-engineering.md  RFC-TEMPLATE.md
docs/roadmap/: IMPLEMENTATION.md
docs/spec/: 00-overview.md  01-architecture.md  02-public-api.md  03-data-model.md  04-error-model.md  05-observability.md  06-security.md  07-testing-strategy.md  08-performance-budget.md  09-release-and-versioning.md  10-glossary.md  11-decision-log.md
