[package]
name = "drakkar-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The InferenceBackend trait, the KvPool interface, and the engine actor (layer 1, RFC-0001/RFC-0005)."

[dependencies]
drakkar-core = { workspace = true }
drakkar-fit = { workspace = true }

[lints]
workspace = true
