[package]
name = "drakkar-grammar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Structured-output engine: JSON-schema and grammar-constrained decoding via llguidance (layer 0, RFC-0003/RFC-0007)."

[dependencies]
drakkar-core = { workspace = true }

[lints]
workspace = true
